# OS-exp

./: .gitignore  README.md
lab1/adder/: adder.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab1/clock/: clock.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab1/copy/: CMakeLists.txt  buffer.h  in.txt  main.c
lab1/lab1All/: CMakeLists.txt  main.c
lab1/monitor/: mainwindow.cpp  mainwindow.h  mainwindow.ui  monitor.pro
lab2/: CMakeLists.txt  main.c
lab3/: test  test.c  test.c~
lab3/driver/: driverTest.c  driverTest.c~
lab4SysMonitor/: lab4SysMonitor.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab4_SysMonitor/: lab4_SysMonitor.pro
